--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "rowan"
+name = "rslint_rowan"
 version = "0.10.0"
-authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>"]
-repository = "https://github.com/rust-analyzer/rowan"
+authors = ["Aleksey Kladov <aleksey.kladov@gmail.com>", "RDambrosio016 <rdambrosio016@gmail.com>"]
 license = "MIT OR Apache-2.0"
-description = "Library for generic lossless syntax trees"
+description = "A simple threadsafe fork of rowan for the rslint project"
 edition = "2018"
 
 [dependencies]
